# Osmium

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  main.cpp  readme.md  vcpkg.json
OsmiumCommon/: CMakeLists.txt
OsmiumCommon/include/: MathUtils.h  Memcheck.h  MeshFileLoading.h  MeshSerialization.h  ResourceArray.h  Serialization.h  SyncUtils.h  TextureSerialization.h
OsmiumCommon/internal/: MeshData.h
OsmiumCommon/src/: MeshSerialization.cpp  Serialization.cpp  SyncUtils.cpp  TextureSerialization.cpp
OsmiumCore/: CMakeLists.txt  main.cpp
OsmiumCore/AssetManagement/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h
OsmiumCore/AssetManagement/AssetType/: DefaultAsset.cpp  DefaultAsset.h  MeshAsset.cpp  MeshAsset.h  TextureAsset.cpp  TextureAsset.h
OsmiumCore/Base/: Component.cpp  Component.h  Entity.cpp  Entity.h  GameInstance.cpp  GameInstance.h  GameObject.cpp  GameObject.h  GameObjectComponent.cpp  GameObjectComponent.h  GameObjectCreation.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  System.cpp  System.h  config.h
OsmiumCore/Components/: C_MeshRenderer.cpp  C_MeshRenderer.h  MeshRenderer.cpp  MeshRenderer.h
OsmiumCore/GOComponents/: GOC_Camera.cpp  GOC_Camera.h  GOC_Collider.cpp  GOC_Collider.h  GOC_DirectionalLight.cpp  GOC_DirectionalLight.h  GOC_MeshRenderer.cpp  GOC_MeshRenderer.h  GOC_PointLight.cpp  GOC_PointLight.h  GOC_Spotlight.cpp  GOC_Spotlight.h  GOC_Transform.cpp  GOC_Transform.h
OsmiumCore/Helpers/: Memcheck.h  Properties.h
OsmiumEditor/: CMakeLists.txt  config.h  main.cpp
OsmiumEditor/GUI/: EditorGUI.cpp  EditorGUI.h
OsmiumEditor/GUI/include/: ComponentInspector.h  EditorGUI.h  EditorWindow.h  HierarchyWindow.h  InspectorWindow.h
OsmiumEditor/GUI/src/: BuiltInGameObjectComponentInspectors.cpp  EditorGUI.cpp  EditorWindow.cpp  HierarchyWindow.cpp  InspectorWindow.cpp  LightInspector.cpp
OsmiumGL/: CMakeLists.txt  OsmiumGlTest.cpp  main.cpp
OsmiumGL/API/: OsmiumGL_API.cpp  OsmiumGL_API.h
OsmiumGL/API/include/: Material.h  Mesh.h  MeshInfo.h  OsmiumGL_API.h  RenderedObject.h  RenderedObjectData.h
OsmiumGL/API/src/: Material.cpp  Mesh.cpp  OsmiumGL_API.cpp  RenderedObject.cpp
OsmiumGL/BindlessCore/: OsmiumBindlessInstance.cpp  OsmiumBindlessInstance.h  bindlessTest.cpp
OsmiumGL/BindlessCore/Utilities/: CoreUtils.h  VkCheck.h  commonStructs.h  debugUtilities.h  debug_utils.h  logger.h  shader_io.h  utilities.h
OsmiumGL/Common/include/: ResourceArray.h  Texture.h  UniformBufferObject.h
OsmiumGL/Core/: Core.cpp  Core.h
OsmiumGL/Core/include/: Core.h  Descriptors.h  DynamicCore.h  MaterialData.h  MeshData.h  PassBindings.h  TextureData.h  config.h
OsmiumGL/Core/src/: Core.cpp  Descriptors.cpp  DynamicCore.cpp  MaterialData.cpp
OsmiumGL/DebugUtils/: ErrorChecking.h  InitUtilVk.h
OsmiumGL/DefaultResources/shaders/: BlinnPhong.frag  BlinnPhong.vert  BlinnPhongCompile.bat  Composition.frag  Composition.vert  DefaultOpaque.frag  DefaultOpaque.vert  DefaultOpaqueDL.vert  DirectionalLightDL.vert  DirectionalLightDLBindless.frag  DirectionalLightDLBindless.vert  NormalSpecSpreadPassDL.frag  NormalSpecSpreadPassDL.vert  NormalSpecSpreadPassDLBindless.frag  NormalSpecSpreadPassDLBindless.vert  PointLightDL.frag  PointLightDL.vert  PointLightDLBindless.frag  PointLightDLBindless.vert  ShadingPassDL.frag  ShadingPassDL.vert  ShadingPassDLBindless.frag  ShadingPassDLBindless.vert  ShadingPassDl.frag  SpotLight.frag  SpotLight.vert  defaultShadersCompile.bat  defaultShadersCompile.sh
OsmiumGL/Initialization/Capabilities/: DeviceCapabilities.h
OsmiumGL/Initialization/SwapChains/: SwapChainUtilities.h
OsmiumGL/ShaderUtilities/: BlinnPhongVertex.h  DefaultShaders.cpp  DefaultShaders.h  DefaultVertex.h  ShaderUtilities.h  TutorialVertex.h  VertexDescriptor.h
OsmiumGL/ShaderUtilities/include/: BlinnPhongVertex.h  DefaultSceneDescriptorSets.h  DefaultShaders.h  DefaultVertex.h  DeferredLightingPipeline.h  DirectionalLight.h  DirectionalLights.h  MainPipeline.h  ParsedDeferredMaterial.h  ParsedMaterial.h  PointLights.h  RenderedObjectData.h  SceneData.h  ShaderUtilities.h  SpotLights.h  VertexDescriptor.h  spirv_reflect.h
OsmiumGL/ShaderUtilities/src/: DefaultSceneDescriptorSets.cpp  DefaultShaders.cpp  DeferredLightingPipeline.cpp  MainPipeline.cpp  ParsedDeferredMaterial.cpp  ParsedMaterial.cpp
OsmiumGL/TestShaders/: TrivialTriangleCompile.bat  trivialTriangle.frag  trivialTriangle.vert  trivialTriangleFrag.spv  trivialTriangleVert.spv
OsmiumPhysics/: CMakeLists.txt
OsmiumPhysics/API/include/: PhysicsAPI.h
OsmiumPhysics/API/src/: PhysicsAPI.cpp
OsmiumPhysics/Core/include/: Collider.h  Collisions.h  Intersection.h  PhysicsScene.h  RigidBody.h  Shapes.h
OsmiumPhysics/Core/src/: Collider.cpp  PhysicsScene.cpp  PhysicsTest.cpp  RigidBody.cpp
